<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ChatBot GPT-3</string>
    <string name="title_chat_ai">Chat AI</string>
    <string name="title_factual_answering">Factual Answering</string>
    <string name="title_friend_chat">Friend Chat</string>
    <string name="title_sarcastic_chat">Sarcastic Chat</string>
    <string name="title_smart_chat">Smart Chat</string>

    <string name="message_hint">Message...</string>
    <string name="message_typing">Typing...</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_restart_conversation">Restart</string>

    <string name="dialog_restart_conversation_title">Warning</string>
    <string name="dialog_restart_conversation_message">Are you sure you want to restart this conversation?</string>
    <string name="dialog_restart_conversation_yes">Yes</string>
    <string name="dialog_restart_conversation_no">No</string>

    <!-- Preferences -->
    <string name="settings_activity_title">Settings</string>

    <string name="settings_profile_header">Profile</string>
    <string name="settings_profile_username">Username</string>
    <string name="settings_profile_biography">Biography</string>

    <string name="settings_text_to_speech_header">Text to Speech</string>
    <string name="settings_text_to_speech_activate">Activate</string>

    <string name="personal_info_prompt">My name is %s.</string>
</resources>